--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,3 +1,4 @@
+<p id="alert"><%= alert %></p>
   <h1><%= t('.welcome') %></h1>
   <p>
     <%= t('.today is ').html_safe %><%= I18n.localize(Date.today, :format => :long).html_safe %>
