--- a/app/views/contacts/index.html.erb
+++ b/app/views/contacts/index.html.erb
@@ -15,7 +15,7 @@
     <% @contacts.each do |contact| %>
       <tr>
         <td><%= contact.name %></td>
-        <td><%= contact.gsm_number_id %></td>
+        <td><%= contact.gsm_numbers.first %></td>
         <td><%= link_to 'Show', contact %></td>
         <td><%= link_to 'Edit', edit_contact_path(contact) %></td>
         <td><%= link_to 'Destroy', contact, method: :delete, data: { confirm: 'Are you sure?' } %></td>
