--- a/app/views/group_messages/_form.html.erb
+++ b/app/views/group_messages/_form.html.erb
@@ -19,6 +19,13 @@
     <%= f.label :message %><br>
     <%= f.text_area :message %>
   </div>
+  <fieldset>
+    <legend>Groups</legend>
+    <%= select_tag :groups,
+      options_from_collection_for_select(current_user.groups, "id", "name"),
+      {:multiple => true, :size => 5}
+    %>
+  </fieldset>
   <div class="actions">
     <%= f.submit %>
   </div>
