Remove group_id to group_message

--- a/app/views/group_messages/show.html.erb
+++ b/app/views/group_messages/show.html.erb
@@ -1,8 +1,8 @@
 <p id="notice"><%= notice %></p>
 
 <p>
-  <strong>Group:</strong>
-  <%= @group_message.group_id %>
+  <strong>Groups:</strong>
+  <%= @group_message.groups %>
 </p>
 
 <p>
