--- a/app/views/group_messages/index.html.erb
+++ b/app/views/group_messages/index.html.erb
@@ -3,7 +3,7 @@
 <table>
   <thead>
     <tr>
-      <th>Group</th>
+      <th>Groups</th>
       <th>Message</th>
       <th></th>
       <th></th>
@@ -14,7 +14,7 @@
   <tbody>
     <% @group_messages.each do |group_message| %>
       <tr>
-        <td><%= group_message.group_id %></td>
+        <td><%= group_message.groups %></td>
         <td><%= group_message.message %></td>
         <td><%= link_to 'Show', group_message %></td>
         <td><%= link_to 'Edit', edit_group_message_path(group_message) %></td>
