--- a/app/views/bulk_messages/_form.html.erb
+++ b/app/views/bulk_messages/_form.html.erb
@@ -19,6 +19,13 @@
     <%= f.label :list_id %><br>
     <%= f.number_field :list_id %>
   </div>
+  <fieldset>
+    <legend>Lists</legend>
+    <%= select_tag :lists,
+      options_from_collection_for_select(current_user.lists, "id", "name"),
+      {:multiple => true, :size => 5}
+    %>
+  </fieldset>
   <div class="actions">
     <%= f.submit %>
   </div>
