Remove list_id to bulk_message

--- a/app/views/bulk_messages/index.html.erb
+++ b/app/views/bulk_messages/index.html.erb
@@ -4,7 +4,7 @@
   <thead>
     <tr>
       <th>Message</th>
-      <th>List</th>
+      <th>Lists</th>
       <th></th>
       <th></th>
       <th></th>
@@ -15,7 +15,7 @@
     <% @bulk_messages.each do |bulk_message| %>
       <tr>
         <td><%= bulk_message.message %></td>
-        <td><%= bulk_message.list_id %></td>
+        <td><%= bulk_message.lists.first %></td>
         <td><%= link_to 'Show', bulk_message %></td>
         <td><%= link_to 'Edit', edit_bulk_message_path(bulk_message) %></td>
         <td><%= link_to 'Destroy', bulk_message, method: :delete, data: { confirm: 'Are you sure?' } %></td>
