--- a/app/views/lists/_form.html.erb
+++ b/app/views/lists/_form.html.erb
@@ -1,4 +1,4 @@
-<%= form_for(@list) do |f| %>
+<%= form_for(@list, :html => { :multipart => true }) do |f| %>
   <% if @list.errors.any? %>
     <div id="error_explanation">
       <h2><%= pluralize(@list.errors.count, "error") %> prohibited this list from being saved:</h2>
@@ -17,7 +17,7 @@
   </div>
   <fieldset>
     <legend>Upload file:</legend>
-      <%= file_field_tag "file" %>
+      <%= f.file_field :file %>
   </fieldset>
   <fieldset>
     <legend>GSM numbers</legend>
