Remove numbers from list

--- a/app/views/lists/_form.html.erb
+++ b/app/views/lists/_form.html.erb
@@ -18,6 +18,8 @@
   <fieldset>
     <legend>Upload file:</legend>
       <%= f.file_field :file %>
+      <%= check_box_tag :remove %>
+      <%= label_tag :remove %>
   </fieldset>
   <fieldset>
     <legend>GSM numbers</legend>
