SingleMessages/GsmNumbers related

--- a/app/views/single_messages/_form.html.erb
+++ b/app/views/single_messages/_form.html.erb
@@ -16,7 +16,7 @@
     <%= f.text_area :message %>
   </div>
   <div class="field">
-    <%= f.label :number %><br>
+    <%= f.label :numbers %><br>
     <%= f.text_field :number %>
   </div>
   <div class="actions">
