--- a/app/views/single_messages/index.html.erb
+++ b/app/views/single_messages/index.html.erb
@@ -4,7 +4,7 @@
   <thead>
     <tr>
       <th>Message</th>
-      <th>Number</th>
+      <th>Numbers</th>
       <th></th>
       <th></th>
       <th></th>
