--- a/app/views/credits/_form.html.erb
+++ b/app/views/credits/_form.html.erb
@@ -15,6 +15,13 @@
     <%= f.label :balance %><br>
     <%= f.text_field :balance %>
   </div>
+  <div class="field">
+    <%= f.label :user %><br>
+    <%= select_tag :user,
+      options_from_collection_for_select(User.all, "id", "email"),
+      {:size => [5,User.all.collect.count].min}
+    %>
+  </div>
   <div class="actions">
     <%= f.submit %>
   </div>
