--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -45,11 +45,13 @@
 
 <body>
 
-<div class="right-menu">
-  <%= link_to t('account'), edit_user_registration_path %>
-  <%= link_to t('sign_out'), destroy_user_session_path, :method => :delete %>
-  Balance: <%= current_user.balance %>
-</div>
+<% if current_user %>
+  <div class="right-menu">
+    <%= link_to t('account'), edit_user_registration_path %>
+    <%= link_to t('sign_out'), destroy_user_session_path, :method => :delete %>
+    Balance: <%= current_user.balance %>
+  </div>
+<% end %>
 
 <div class="menu">
   <%= link_to t('home'), '/' %>
@@ -58,8 +60,8 @@
   <%= link_to t('lists'), lists_path %>
   <%= link_to t('summary'), delivery_reports_path -%>
   <%= link_to t('all_sms'), list_delivery_reports_path %>
-  <% if current_user.admin %>
-    <%= render '/admin_links' %>
+  <% if current_user and current_user.admin%>
+      <%= render '/admin_links' %>
   <% end %>
 </div>
 
