--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -39,12 +39,14 @@
     .menu { margin-top: 30px; }
     .menu a { margin-right: 20px; font-size: 16px; }
     .right-menu { margin-top: 0px; float: right; }
+    .right-menu a { margin-right: 10px; }
 
   </STYLE>
 
 <body>
 
 <div class="right-menu">
+  <%= link_to t('account'), edit_user_registration_path %>
   Balance: <%= current_user.balance %>
 </div>
 
