--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -47,6 +47,7 @@
 
 <div class="right-menu">
   <%= link_to t('account'), edit_user_registration_path %>
+  <%= link_to t('sign_out'), destroy_user_session_path, :method => :delete %>
   Balance: <%= current_user.balance %>
 </div>
 
