--- a/app/views/bulk_messages/index.html.erb
+++ b/app/views/bulk_messages/index.html.erb
@@ -20,6 +20,6 @@
   </tbody>
 </table>
 
-<br>
+<p><%= will_paginate @bulk_messages %></p>
 
 <%= link_to 'New Bulk message', new_bulk_message_path %>
