--- a/app/views/lists/index.html.erb
+++ b/app/views/lists/index.html.erb
@@ -4,7 +4,7 @@
   <thead>
     <tr>
       <th>Name</th>
-      <th>Amount</th>
+      <th>Recipients</th>
       <th></th>
       <th></th>
       <th></th>
