--- a/app/views/single_messages/index.html.erb
+++ b/app/views/single_messages/index.html.erb
@@ -4,7 +4,7 @@
   <thead>
     <tr>
       <th>Message</th>
-      <th>Numbers</th>
+      <th>Recipients</th>
       <th></th>
     </tr>
   </thead>
@@ -13,7 +13,7 @@
     <% @single_messages.each do |single_message| %>
       <tr>
         <td><%= single_message.message %></td>
-        <td><%= single_message.number %></td>
+        <td><%= single_message.gsm_numbers.count %></td>
         <td><%= link_to 'Show', single_message %></td>
       </tr>
     <% end %>
