--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -40,6 +40,8 @@
     .menu a { margin-right: 20px; font-size: 16px; }
     .right-menu { margin-top: 0px; float: right; }
     .right-menu a { margin-right: 10px; }
+    .footer-menu { margin-top: 10px; }
+    .footer-menu a { margin-right: 10px; font-size: 0.9em; }
 
   </STYLE>
 
@@ -70,11 +72,8 @@
 <%= yield %>
 
 <hr>
-<p>
-  By <%= link_to 'openBGS', 'http://openbgs.com' %>
-</p>
 
-<p style="margin-top: 600px"></p>
+<%= render '/footer_menu' %>
 
 
 </body>
