--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -37,7 +37,7 @@
 
 
     .menu { margin-top: 30px; }
-    .menu a { margin-right: 20px; font-size: 16px; }
+    .menu a { margin-right: 20px; font-size: 1.2em; }
     .right-menu { margin-top: 0px; float: right; }
     .right-menu a { margin-right: 10px; }
     .footer-menu { margin-top: 10px; }
