--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -48,11 +48,7 @@
 <body>
 
 <% if current_user %>
-  <div class="right-menu">
-    <%= link_to t('account'), edit_user_registration_path %>
-    <%= link_to t('sign_out'), destroy_user_session_path, :method => :delete %>
-    <%= link_to t('balance'), credits_path %>: <%= current_user.balance %>
-  </div>
+  <%= render '/right_menu' %>
 
   <%= render '/top_menu' %>
 
