--- a/app/views/single_messages/_form.html.erb
+++ b/app/views/single_messages/_form.html.erb
@@ -12,13 +12,12 @@
   <% end %>
 
   <div class="field">
-    <%= f.label :message %><br>
-    <%= f.text_area :message %>
-  </div>
-  <div class="field">
     <%= f.label :numbers %><br>
     <%= f.text_field :number %>
   </div>
+
+  <%= render '/messages/message_text', :f => f %>
+
   <div class="actions">
     <%= f.submit %>
   </div>
