--- a/app/views/bulk_messages/_form.html.erb
+++ b/app/views/bulk_messages/_form.html.erb
@@ -11,10 +11,6 @@
     </div>
   <% end %>
 
-  <div class="field">
-    <%= f.label :message %><br>
-    <%= f.text_area :message %>
-  </div>
   <fieldset>
     <legend>Lists</legend>
     <%= select_tag :lists,
@@ -22,6 +18,9 @@
       {:multiple => true, :size => 5}
     %>
   </fieldset>
+
+  <%= render '/messages/message_text', :f => f %>
+
   <div class="actions">
     <%= f.submit %>
   </div>
