--- a/app/views/single_messages/_form.html.erb
+++ b/app/views/single_messages/_form.html.erb
@@ -18,6 +18,8 @@
 
   <%= render '/messages/message_text', :f => f %>
 
+  <%= render '/messages/message_options'%>
+
   <div class="actions">
     <%= f.submit %>
   </div>
