Bulk message options

--- a/app/views/bulk_messages/_form.html.erb
+++ b/app/views/bulk_messages/_form.html.erb
@@ -21,6 +21,8 @@
 
   <%= render '/messages/message_text', :f => f %>
 
+  <%= render '/messages/message_options' %>
+
   <div class="actions">
     <%= f.submit %>
   </div>
