--- a/app/views/single_messages/show.html.erb
+++ b/app/views/single_messages/show.html.erb
@@ -10,5 +10,7 @@
   <%= @single_message.number %>
 </p>
 
+<%= render '/messages/message_route' %>
+
 <%= link_to 'Edit', edit_single_message_path(@single_message) %> |
 <%= link_to 'Back', single_messages_path %>
