--- a/app/views/single_messages/_form.html.erb
+++ b/app/views/single_messages/_form.html.erb
@@ -18,7 +18,7 @@
 
   <%= render '/messages/message_text', :f => f %>
 
-  <%= render '/messages/message_options'%>
+  <%= render '/messages/message_options', :f => f %>
 
   <div class="actions">
     <%= f.submit %>
