--- a/app/views/single_messages/_form.html.erb
+++ b/app/views/single_messages/_form.html.erb
@@ -20,7 +20,6 @@
 
   <%= render '/messages/message_options', :f => f %>
 
-  <div class="actions">
-    <%= f.submit %>
-  </div>
+  <%= render '/messages/send_button', :f => f %>
+
 <% end %>
