--- a/app/views/single_messages/show.html.erb
+++ b/app/views/single_messages/show.html.erb
@@ -12,4 +12,5 @@
 
 <%= render '/messages/message_route' %>
 
+<%= link_to 'New', new_single_message_path %> |
 <%= link_to 'Back', single_messages_path %>
