All BulkMessages link

--- a/app/views/bulk_messages/show.html.erb
+++ b/app/views/bulk_messages/show.html.erb
@@ -16,4 +16,4 @@
 </p>
 
 <%= link_to 'New', new_bulk_message_path %> |
-<%= link_to 'Back', bulk_messages_path %>
+<%= link_to 'All', bulk_messages_path %>
