--- a/app/views/_top_menu.html.erb
+++ b/app/views/_top_menu.html.erb
@@ -1,7 +1,7 @@
 <div class="menu">
   <%= link_to t('home'), '/' %>
   <%= link_to t('single_mode'), single_messages_path %>
-  <%= link_to t('bulk_messages'), bulk_messages_path %>
+  <%= link_to t('massive_mode'), bulk_messages_path %>
   <%= link_to t('lists'), lists_path %>
   <%= link_to t('summary'), delivery_reports_path -%>
   <%= link_to t('all_sms'), list_delivery_reports_path %>
