BulkMessage Lists and Recipients amount

--- a/app/views/bulk_messages/show.html.erb
+++ b/app/views/bulk_messages/show.html.erb
@@ -7,7 +7,12 @@
 
 <p>
   <strong>Lists:</strong>
-  <%= @bulk_message.lists.first %>
+  <%= @bulk_message.lists.count %>
+</p>
+
+<p>
+  <strong>Recipients:</strong>
+  <%= @bulk_message.gsm_numbers.count %>
 </p>
 
 <p>
