--- a/app/views/routes/index.html.erb
+++ b/app/views/routes/index.html.erb
@@ -18,8 +18,8 @@
       <tr>
         <td><%= route.name %></td>
         <td><%= route.price %></td>
-        <td><%= route.user_id %></td>
-        <td><%= route.gateway_id %></td>
+        <td><%= route.user %></td>
+        <td><%= route.gateway %></td>
         <td><%= link_to 'Show', route %></td>
         <td><%= link_to 'Edit', edit_route_path(route) %></td>
         <td><%= link_to 'Destroy', route, method: :delete, data: { confirm: 'Are you sure?' } %></td>
