Route show view uses to string

--- a/app/views/routes/show.html.erb
+++ b/app/views/routes/show.html.erb
@@ -12,12 +12,12 @@
 
 <p>
   <strong>User:</strong>
-  <%= @route.user_id %>
+  <%= @route.user %>
 </p>
 
 <p>
   <strong>Gateway:</strong>
-  <%= @route.gateway_id %>
+  <%= @route.gateway %>
 </p>
 
 <%= link_to 'Edit', edit_route_path(@route) %> |
