Validate List name and file

--- a/app/views/lists/_form.html.erb
+++ b/app/views/lists/_form.html.erb
@@ -16,7 +16,7 @@
     <%= f.text_field :name %>
   </div>
   <fieldset>
-    <legend>Upload file:</legend>
+    <legend>Upload file (.txt):</legend>
       <%= f.file_field :file %>
       <%= check_box_tag :remove %>
       <%= label_tag :remove %>
