Related DLR in the Rails way

--- a/app/views/action_smser/delivery_reports/list.html.erb
+++ b/app/views/action_smser/delivery_reports/list.html.erb
@@ -31,7 +31,7 @@ offset = 0 if offset < -0
     <th>&nbsp;O</th>
   </tr>
 
-  <% ActionSmser::DeliveryReport.where(:user_id => current_user.id).order('created_at DESC').offset(offset).first(items_within_page).each do |delivery_report| %>
+  <% ActionSmser::DeliveryReport.where(:user => current_user).order('created_at DESC').offset(offset).first(items_within_page).each do |delivery_report| %>
   <tr>
     <td style="white-space: nowrap;"><%= delivery_report.id %></td>
     <td style="white-space: nowrap;"><%= delivery_report.created_at %></td>
