Select list in bulk from List show view

--- a/app/views/bulk_messages/_form.html.erb
+++ b/app/views/bulk_messages/_form.html.erb
@@ -14,7 +14,7 @@
   <fieldset>
     <legend>Lists</legend>
     <%= select_tag :list_ids,
-      options_from_collection_for_select(current_user.lists, "id", "name"),
+      options_from_collection_for_select(current_user.lists, "id", "name", @list_ids ),
       {:multiple => true, :size => 5}
     %>
   </fieldset>
