--- a/app/views/lists/show.html.erb
+++ b/app/views/lists/show.html.erb
@@ -11,4 +11,4 @@
 
 <%= link_to 'Edit', edit_list_path(@list) %> |
 <%= link_to 'Back', lists_path %> |
-<%= link_to 'New Bulk', new_bulk_message_path %>
+<%= link_to 'New Bulk', new_bulk_message_path(:list_ids => [@list.id]) %>
