--- a/app/views/_admin_links.html.erb
+++ b/app/views/_admin_links.html.erb
@@ -1,2 +1,2 @@
-<%= link_to t('credits'), credits_path %>
-<%= link_to t('routes'), routes_path %>
+<%= link_to t('credits'), main_app.credits_path %>
+<%= link_to t('routes'), main_app.routes_path %>
