--- a/app/views/_right_menu.html.erb
+++ b/app/views/_right_menu.html.erb
@@ -1,5 +1,5 @@
 <div class="right-menu">
-  <%= link_to t('account'), edit_user_registration_path %>
-  <%= link_to t('sign_out'), destroy_user_session_path, :method => :delete %>
-  <%= link_to t('balance'), credits_path %>: <%= current_user.balance %>
+  <%= link_to t('account'), main_app.edit_user_registration_path %>
+  <%= link_to t('sign_out'), main_app.destroy_user_session_path, :method => :delete %>
+  <%= link_to t('balance'), main_app.credits_path %>: <%= current_user.balance %>
 </div>
