--- a/app/views/_top_menu.html.erb
+++ b/app/views/_top_menu.html.erb
@@ -1,10 +1,10 @@
 <div class="menu">
   <%= link_to t('home'), '/' %>
-  <%= link_to t('single_mode'), new_single_message_path %>
-  <%= link_to t('massive_mode'), new_bulk_message_path %>
-  <%= link_to t('lists'), lists_path %>
+  <%= link_to t('single_mode'), main_app.new_single_message_path %>
+  <%= link_to t('massive_mode'), main_app.new_bulk_message_path %>
+  <%= link_to t('lists'), main_app.lists_path %>
   <%= link_to t('summary'), delivery_reports_path -%>
-  <%= link_to t('all_sms'), list_delivery_reports_path %>
+  <%= link_to t('all_sms'), main_app.list_delivery_reports_path %>
   <% if current_user and current_user.admin%>
       <%= render '/admin_links' %>
   <% end %>
