--- a/app/views/action_smser/delivery_reports/list.html.erb
+++ b/app/views/action_smser/delivery_reports/list.html.erb
@@ -21,7 +21,7 @@ offset = 0 if offset < -0
     <th>Id</th>
     <th>Created_at</th>
     <th>Msg id</th>
-    <th>Gateway</th>
+    <th>Route</th>
     <th>Status</th>
     <th>Status updated at</th>
     <th>Recipient</th>
