--- a/app/views/action_smser/delivery_reports/index.html.erb
+++ b/app/views/action_smser/delivery_reports/index.html.erb
@@ -8,7 +8,7 @@
     when 'last 30 days'
       30.days.ago..10.minutes.ago
     when 'this month'
-      Time.zone.now.at_beginning_of_month..10.minutes.ago
+      Time.current.at_beginning_of_month..10.minutes.ago
     when '1 month ago'
       1.month.ago.at_beginning_of_month..1.month.ago.at_end_of_month
     when '2 months ago'
