--- a/app/views/action_smser/delivery_reports/index.html.erb
+++ b/app/views/action_smser/delivery_reports/index.html.erb
@@ -41,7 +41,7 @@
 <h1>Delivery Reports </h1>
 
 <h2>Summary for
-  (<span style="font-size: smaller"><%= "#{time_span.first.to_s(:db)} => #{time_span.last.to_s(:db)}" %></span>)
+  (<span style="font-size: smaller"><%= "#{time_span.first.to_s} => #{time_span.last.to_s}" %></span>)
   <%= "for #{params[:gateway]}" unless params[:gateway].blank? %>
 </h2>
 
