Fix summary for avoid to wait

--- a/app/views/action_smser/delivery_reports/index.html.erb
+++ b/app/views/action_smser/delivery_reports/index.html.erb
@@ -6,19 +6,19 @@
     when 'week before that'
       2.weeks.ago..1.week.ago
     when 'last 30 days'
-      30.days.ago..10.minutes.ago
+      30.days.ago..Time.current
     when 'this month'
-      Time.current.at_beginning_of_month..10.minutes.ago
+      Time.current.at_beginning_of_month..Time.current
     when '1 month ago'
       1.month.ago.at_beginning_of_month..1.month.ago.at_end_of_month
     when '2 months ago'
       2.month.ago.at_beginning_of_month..2.month.ago.at_end_of_month
     when 'last 24 hours'
-      1.day.ago..10.minutes.ago
+      1.day.ago..Time.current
     when /^(\d\d)-(\d\d) hours/
       $1.to_i.hours.ago..$2.to_i.hours.ago
     else
-      1.week.ago..10.minutes.ago
+      1.week.ago..Time.current
     end
 
   ar_timespan = ActionSmser::DeliveryReport.where(:user_id => current_user.id).where(:created_at => time_span)
