--- a/app/views/_right_menu.html.erb
+++ b/app/views/_right_menu.html.erb
@@ -1,4 +1,5 @@
 <div class="right-menu">
+  Logged in as <b><%= current_user.username %></b>
   <%= link_to t('account'), main_app.edit_user_registration_path %>
   <%= link_to t('sign_out'), main_app.destroy_user_session_path, :method => :delete %>
   <%= link_to t('balance'), main_app.credits_path %>: <%= current_user.balance %>
