Last n items in DLR list view

--- a/app/views/action_smser/delivery_reports/list.html.erb
+++ b/app/views/action_smser/delivery_reports/list.html.erb
@@ -1,7 +1,7 @@
 
 <% items_within_page = 20 %>
 <h1>Delivery Reports</h1>
-<h2 id="delivery_reports_list"><%= items_within_page %> delivery reports ordered by creation date</h2>
+<h2 id="delivery_reports_list">Last <%= items_within_page %> delivery reports ordered by creation date</h2>
 
 <%
 offset = params[:offset].to_i
