--- a/app/views/action_smser/delivery_reports/index.html.erb
+++ b/app/views/action_smser/delivery_reports/index.html.erb
@@ -38,39 +38,38 @@
 %>
 
 
-<h1>Delivery Reports </h1>
+<h1><%= t('delivery_reports') %> </h1>
 
-<h2>Summary for
+<h2><%= t('summary_for').html_safe %>
   (<span style="font-size: smaller"><%= "#{time_span.first.to_s} => #{time_span.last.to_s}" %></span>)
   <%= "for #{params[:gateway]}" unless params[:gateway].blank? %>
 </h2>
 
 <p class="selection_links">
-  <strong>Show summary:</strong>
-  <% ['Last 24 hours', '48-24 hours', '72-48 hours', '96-72 hours ago', 'Last week', 'Week before that',
-      'Last 30 days', 'This month', '1 month ago', '2 months ago'].each do |key| %>
-    <%= link_to key, dr_summary_url(:time_span => key), :class => (key == params['time_span'] ? 'selected' : 'not_selected') %>
+  <strong><%= t('show_summary').html_safe %>:</strong>
+  <% {t('last_24h').html_safe => 'Last 24 hours', t('2_days').html_safe =>'48-24 hours', t('3_days').html_safe =>'72-48 hours', t('4_days').html_safe =>'96-72 hours ago', t('last_week').html_safe =>'Last week', t('week_before').html_safe =>'Week before that', t('30_days').html_safe =>'Last 30 days', t('this_month').html_safe =>'This month', t('1_month').html_safe =>'1 month ago', t('2_month').html_safe =>'2 months ago'}.each do |key,value| %>
+    <%= link_to key, dr_summary_url(:time_span => value), :class => (value == params['time_span'] ? 'selected' : 'not_selected') %>
   <% end %>
 </p>
 
 <p class="selection_links">
-  <strong>Redeliveries:</strong>
+  <strong><%= t('redeliveries').html_safe %>:</strong>
 
-  <% ['Include normally', 'Ignore redeliveries', 'Only redeliveries'].each do |key| %>
-    <%= link_to key, dr_summary_url(:redeliveries => key), :class => (key == params['redeliveries'] ? 'selected' : 'not_selected') %>
+  <% {t('include_normally').html_safe =>'Include normally', t('ignore_redeliveries').html_safe =>'Ignore redeliveries', t('only_redeliveries').html_safe =>'Only redeliveries'}.each do |key,value| %>
+    <%= link_to key, dr_summary_url(:redeliveries => value), :class => (value == params['redeliveries'] ? 'selected' : 'not_selected') %>
   <% end %>
 </p>
 
-<h2>Select route</h2>
+<h2><%= t('select_route') %></h2>
 <ul class="selection_links" style="width: 500px;">
   <li>
     <strong>
-        <%= link_to('all', dr_summary_url(:gateway => nil) ) %>
+        <%= link_to(t('all'), dr_summary_url(:gateway => nil) ) %>
     </strong>
     &nbsp;&nbsp;
     <%= total = ar_redeliveries.count %> sms
     &nbsp;&nbsp;
-    (you can select only routes that have messages in this period)
+    (<%= t('you_can_select').html_safe %>)
   </li>
   <% ar_redeliveries.group(:gateway).count.each do |key, val| %>
     <li class="<%= (key == params['gateway'] ? 'selected' : 'not_selected') -%>">
@@ -86,13 +85,13 @@
 </ul>
 
 
-<h2>Delivered Within (hour:min:sec)</h2>
+<h2><%= t('delivered_within') %></h2>
   <table>
     <tr>
-      <th>DeliveryTime</th>
+      <th><%= t('delivery_time') %></th>
       <th>Sms</th>
-      <th>% of sent sms</th>
-      <th>% of delivered sms</th>
+      <th>% <%= t('of_sent_sms') %></th>
+      <th>% <%= t('of_delivered_sms') %></th>
     </tr>
 
     <% ar_delivered = ar_gateway.where(:status => 'delivered')
@@ -110,7 +109,7 @@
     <% end %>
   </table>
 
-<h2>DeliveryReport Statuses</h2>
+  <h2><%= t('delivery_report_statuses') %></h2>
 <ul>
 <%
    total = ar_gateway.count
@@ -126,14 +125,14 @@
 <% end %>
 </ul>
 
-<h2>By Sms Type</h2>
+<h2><%= t('by_sms_type') %></h2>
 <table>
   <tr>
-    <th>SmsType</th>
-    <th>Count</th>
-    <th>% of total</th>
-    <th>Delivered count</th>
-    <th>Delivery %</th>
+    <th><%= t('sms_type') %></th>
+    <th><%= t('count') %></th>
+    <th>% <%= t('of total') %></th>
+    <th><%= t('delivered_count') %></th>
+    <th><%= t('delivery') %></th>
   </tr>
 
 <%
