--- a/app/views/action_smser/delivery_reports/index.html.erb
+++ b/app/views/action_smser/delivery_reports/index.html.erb
@@ -130,7 +130,7 @@
   <tr>
     <th><%= t('sms_type') %></th>
     <th><%= t('count') %></th>
-    <th>% <%= t('of total') %></th>
+    <th>% <%= t('of_total') %></th>
     <th><%= t('delivered_count') %></th>
     <th><%= t('delivery') %></th>
   </tr>
