--- a/app/views/credits/new.html.erb
+++ b/app/views/credits/new.html.erb
@@ -1,5 +1,5 @@
-<h1>New credit</h1>
+<h1><%= t('new_credit').html_safe %></h1>
 
 <%= render 'form' %>
 
-<%= link_to 'Back', credits_path %>
+<%= link_to t('back').html_safe, credits_path %>
