--- a/app/views/credits/show.html.erb
+++ b/app/views/credits/show.html.erb
@@ -10,5 +10,5 @@
   <%= @credit.user %>
 </p>
 
-<%= link_to 'Edit', edit_credit_path(@credit) %> |
-<%= link_to 'Back', credits_path %>
+<%= link_to t('edit'), edit_credit_path(@credit) %> |
+<%= link_to t('back').html_safe, credits_path %>
