--- a/app/views/credits/edit.html.erb
+++ b/app/views/credits/edit.html.erb
@@ -1,6 +1,6 @@
-<h1>Editing credit</h1>
+<h1><%= t('editing_credit').html_safe %></h1>
 
 <%= render 'form' %>
 
-<%= link_to 'Show', @credit %> |
-<%= link_to 'Back', credits_path %>
+<%= link_to t('show'), @credit %> |
+<%= link_to t('back').html_safe, credits_path %>
