--- a/app/views/routes/edit.html.erb
+++ b/app/views/routes/edit.html.erb
@@ -1,6 +1,6 @@
-<h1>Editing route</h1>
+<h1><%= t('editing_route') %></h1>
 
 <%= render 'form' %>
 
-<%= link_to 'Show', @route %> |
-<%= link_to 'Back', routes_path %>
+<%= link_to t('show'), @route %> |
+<%= link_to t('back').html_safe, routes_path %>
