--- a/app/views/action_smser/delivery_reports/list.html.erb
+++ b/app/views/action_smser/delivery_reports/list.html.erb
@@ -1,7 +1,7 @@
 
 <% items_within_page = 20 %>
-<h1>Delivery Reports</h1>
-<h2 id="delivery_reports_list">Last <%= items_within_page %> delivery reports ordered by creation date</h2>
+<h1><%= t('delivery_reports') %></h1>
+<h2 id="delivery_reports_list"><%= t('last').html_safe %> <%= items_within_page %> <%= t('delivery_reports') %> <%= t('ordered_by_creation_date').html_safe %></h2>
 
 <%
 offset = params[:offset].to_i
@@ -9,26 +9,26 @@ offset = 0 if offset < -0
 %>
 
 <p>
-  <strong>List offset: <%= offset %>.</strong>
-  Add
+<strong><%= t('list_offset') %>: <%= offset %>.</strong>
+  <%= t('add').html_safe %>
   <%= link_to("- #{items_within_page}",  list_delivery_reports_path(:offset => offset-items_within_page)) unless offset == 0 %>
   <%= link_to "+ #{items_within_page}",  list_delivery_reports_path(:offset => offset+items_within_page) %>
-  to offset
+  <%= t('to_offset').html_safe %>
 </p>
 
 <table style="margin-top: 20px; font-size: 10px;">
   <tr>
-    <th>Id</th>
-    <th>Created_at</th>
-    <th>Msg id</th>
-    <th>Route</th>
-    <th>Status</th>
-    <th>Status updated at</th>
-    <th>Recipient</th>
-    <th>Sender</th>
-    <th>Sms Type</th>
-    <th>Re Delivered</th>
-    <th>Re Delivery Of</th>
+    <th><%= t('id') %></th>
+    <th><%= t('created_at') %></th>
+    <th><%= t('msg_id') %></th>
+    <th><%= t('route') %></th>
+    <th><%= t('status') %></th>
+    <th><%= t('status_updated_at') %></th>
+    <th><%= t('recipient') %></th>
+    <th><%= t('sender') %></th>
+    <th><%= t('sms_type') %></th>
+    <th><%= t('re_delivered') %></th>
+    <th><%= t('re_delivery_of').html_safe %></th>
     <th>&nbsp;O</th>
   </tr>
 
