--- a/app/views/action_smser/delivery_reports/show.html.erb
+++ b/app/views/action_smser/delivery_reports/show.html.erb
@@ -1,16 +1,16 @@
 <p id="notice"><%= notice %></p>
 
 <p>
-  <strong>Message Id:</strong>
+  <strong><%= t('message_id') %>:</strong>
   <%= @delivery_report.msg_id %>
 </p>
 
 <p>
-  <strong>Status:</strong>
+  <strong><%= t('status') %>:</strong>
   <%= @delivery_report.status %>
 </p>
 
 <p>
-  <strong>Route:</strong>
+  <strong><%= t('route') %>:</strong>
   <%= @delivery_report.gateway %>
 </p>
