Message label in Bulk show view

--- a/app/views/bulk_messages/show.html.erb
+++ b/app/views/bulk_messages/show.html.erb
@@ -1,7 +1,7 @@
 <p id="notice"><%= notice %></p>
 
 <p>
-  <strong>Message:</strong>
+  <strong><%= t(:message).capitalize%>:</strong>
   <%= @bulk_message.message %>
 </p>
 
