--- a/app/views/single_messages/_form.html.erb
+++ b/app/views/single_messages/_form.html.erb
@@ -12,7 +12,7 @@
   <% end %>
 
   <div class="field">
-    <%= f.label :recipients %><br>
+    <%= f.label t(:recipient).capitalize %><br>
     <%= f.text_field :number %>
   </div>
 
