--- a/app/views/_admin_links.html.erb
+++ b/app/views/_admin_links.html.erb
@@ -1,2 +1,3 @@
 <%= link_to t('credits').html_safe, main_app.credits_path %>
 <%= link_to t('routes'), main_app.routes_path %>
+<%= link_to t('users'), main_app.users_path %>
