Capitalize routes in admin links

--- a/app/views/_admin_links.html.erb
+++ b/app/views/_admin_links.html.erb
@@ -1,2 +1,2 @@
 <%= link_to t('credits').html_safe, main_app.credits_path %>
-<%= link_to t('routes'), main_app.routes_path %>
+<%= link_to t('routes').capitalize, main_app.routes_path %>
