--- a/app/views/messages/_message_text.html.erb
+++ b/app/views/messages/_message_text.html.erb
@@ -1,5 +1,5 @@
 <fieldset>
-  <legend>Message</legend>
+  <legend><%= t(:message).capitalize %></legend>
   <div class="field">
     <%= f.text_area :message %>
   </div>
