--- a/app/views/single_messages/edit.html.erb
+++ b/app/views/single_messages/edit.html.erb
@@ -1,6 +1,6 @@
-<h1>Editing single_message</h1>
+<h1> <%= t(:editing, item: t(:single_message))%></h1>
 
 <%= render 'form' %>
 
-<%= link_to 'Show', @single_message %> |
-<%= link_to 'Back', single_messages_path %>
+<%= link_to t(:show).html_safe, @single_message %> |
+<%= link_to t(:back).html_safe, single_messages_path %>
