--- a/app/views/single_messages/index.html.erb
+++ b/app/views/single_messages/index.html.erb
@@ -1,10 +1,10 @@
-<h1>Listing single messages</h1>
+<h1> <%= t(:single_message_plural).capitalize %></h1>
 
 <table>
   <thead>
     <tr>
-      <th>Message</th>
-      <th>Recipients</th>
+      <th><%= t(:message).capitalize %></th>
+      <th><%= t(:recipient).pluralize.capitalize %></th>
       <th></th>
     </tr>
   </thead>
@@ -14,7 +14,7 @@
       <tr>
         <td><%= single_message.message %></td>
         <td><%= single_message.gsm_numbers.count %></td>
-        <td><%= link_to 'Show', single_message %></td>
+        <td><%= link_to t(:show), single_message %></td>
       </tr>
     <% end %>
   </tbody>
@@ -22,4 +22,4 @@
 
 <p><%= will_paginate @lists %></p>
 
-<%= link_to 'New Single message', new_single_message_path %>
+<%= link_to t(:new_item, item: t(:single_message).titlecase ), new_single_message_path %>
