--- a/app/views/single_messages/new.html.erb
+++ b/app/views/single_messages/new.html.erb
@@ -1,5 +1,5 @@
-<h1> <%= t('new', item: t('single_message')) %> </h1>
+<h1> <%= t(:new_item, item: t('single_message')) %> </h1>
 
 <%= render 'form' %>
 
-<%= link_to 'Back', single_messages_path %>
+<%= link_to t(:back).html_safe, single_messages_path %>
