--- a/app/views/messages/_message_route.html.erb
+++ b/app/views/messages/_message_route.html.erb
@@ -1,4 +1,4 @@
 <p>
-  <strong><%= label_tag :route %>:</strong>
+  <strong><%= label_tag t(:route).capitalize %>:</strong>
   <%= @single_message.route %>
 </p>
