--- a/app/views/bulk_messages/index.html.erb
+++ b/app/views/bulk_messages/index.html.erb
@@ -1,11 +1,11 @@
-<h1>Listing bulk messages</h1>
+<h1><%= t(:bulk_message_plural).titlecase %></h1>
 
 <table>
   <thead>
     <tr>
-      <th>Message</th>
-      <th>Lists</th>
-      <th>Recipients</th>
+      <th><%= t(:message).capitalize%></th>
+      <th><%= t(:lists)%></th>
+      <th><%= t(:recipient).pluralize.capitalize%></th>
       <th></th>
     </tr>
   </thead>
@@ -16,7 +16,7 @@
         <td><%= bulk_message.message %></td>
         <td><%= bulk_message.lists.count %></td>
         <td><%= bulk_message.gsm_numbers.count %></td>
-        <td><%= link_to 'Show', bulk_message %></td>
+        <td><%= link_to t(:show), bulk_message %></td>
       </tr>
     <% end %>
   </tbody>
@@ -24,4 +24,4 @@
 
 <p><%= will_paginate @bulk_messages %></p>
 
-<%= link_to 'New Bulk message', new_bulk_message_path %>
+<%= link_to t(:new_item, item: t(:bulk_message).titlecase), new_bulk_message_path %>
