--- a/app/views/bulk_messages/edit.html.erb
+++ b/app/views/bulk_messages/edit.html.erb
@@ -1,6 +1,6 @@
-<h1>Editing bulk_message</h1>
+<h1><%= t(:editing, item: t(:bulk_message))%></h1>
 
 <%= render 'form' %>
 
-<%= link_to 'Show', @bulk_message %> |
-<%= link_to 'Back', bulk_messages_path %>
+<%= link_to t(:show), @bulk_message %> |
+<%= link_to t(:back).html_safe, bulk_messages_path %>
