--- a/app/views/gateways/_form.html.erb
+++ b/app/views/gateways/_form.html.erb
@@ -12,11 +12,11 @@
   <% end %>
 
   <div class="field">
-    <%= f.label :name %><br>
+    <%= f.label t(:name) %><br>
     <%= f.text_field :name %>
   </div>
   <div class="field">
-    <%= f.label :price %><br>
+    <%= f.label t(:price) %><br>
     <%= f.text_field :price %>
   </div>
   <div class="actions">
