--- a/app/views/gateways/edit.html.erb
+++ b/app/views/gateways/edit.html.erb
@@ -1,6 +1,6 @@
-<h1>Editing gateway</h1>
+<h1><%= t(:editing, item: t(:gateway))%></h1>
 
 <%= render 'form' %>
 
-<%= link_to 'Show', @gateway %> |
-<%= link_to 'Back', gateways_path %>
+<%= link_to t(:show), @gateway %> |
+<%= link_to t(:back).html_safe, gateways_path %>
