--- a/app/views/gateways/index.html.erb
+++ b/app/views/gateways/index.html.erb
@@ -1,10 +1,10 @@
-<h1>Listing gateways</h1>
+<h1><%= t(:gateway).pluralize%></h1>
 
 <table>
   <thead>
     <tr>
-      <th>Name</th>
-      <th>Price</th>
+      <th><%= t(:name)%></th>
+      <th><%= t(:price)%></th>
       <th></th>
       <th></th>
       <th></th>
@@ -16,9 +16,9 @@
       <tr>
         <td><%= gateway.name %></td>
         <td><%= gateway.price %></td>
-        <td><%= link_to 'Show', gateway %></td>
-        <td><%= link_to 'Edit', edit_gateway_path(gateway) %></td>
-        <td><%= link_to 'Destroy', gateway, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+        <td><%= link_to t(:show), gateway %></td>
+        <td><%= link_to t(:edit), edit_gateway_path(gateway) %></td>
+        <td><%= link_to t(:destroy), gateway, method: :delete, data: { confirm: 'Are you sure?' } %></td>
       </tr>
     <% end %>
   </tbody>
@@ -26,4 +26,4 @@
 
 <br>
 
-<%= link_to 'New Gateway', new_gateway_path %>
+<%= link_to t(:new_item, item: t(:gateway).capitalize), new_gateway_path %>
