--- a/app/views/gateways/new.html.erb
+++ b/app/views/gateways/new.html.erb
@@ -1,5 +1,5 @@
-<h1>New gateway</h1>
+<h1><%=t(:new_item, item: t(:gateway))%></h1>
 
 <%= render 'form' %>
 
-<%= link_to 'Back', gateways_path %>
+<%= link_to t(:back).html_safe, gateways_path %>
