--- a/app/views/lists/index.html.erb
+++ b/app/views/lists/index.html.erb
@@ -1,10 +1,10 @@
-<h1>Listing lists</h1>
+<h1><%=t(:lists)%></h1>
 
 <table>
   <thead>
     <tr>
-      <th>Name</th>
-      <th>Recipients</th>
+      <th><%= t(:name).capitalize %></th>
+      <th><%= t(:recipient).pluralize.capitalize %></th>
       <th></th>
       <th></th>
       <th></th>
@@ -16,9 +16,9 @@
       <tr>
         <td><%= list.name %></td>
         <td><%= list.gsm_numbers.count %></td>
-        <td><%= link_to 'Show', list %></td>
-        <td><%= link_to 'Edit', edit_list_path(list) %></td>
-        <td><%= link_to 'Destroy', list, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+        <td><%= link_to t('show'), list %></td>
+        <td><%= link_to t('edit'), edit_list_path(list) %></td>
+        <td><%= link_to t('destroy'), list, method: :delete, data: { confirm: 'Are you sure?' } %></td>
       </tr>
     <% end %>
   </tbody>
@@ -26,4 +26,4 @@
 
 <p><%= will_paginate @lists %></p>
 
-<%= link_to 'New List', new_list_path %>
+<%= link_to t(:new_item_f, item: t(:lists).singularize.capitalize), new_list_path %>
