--- a/app/views/lists/new.html.erb
+++ b/app/views/lists/new.html.erb
@@ -1,5 +1,5 @@
-<h1>New list</h1>
+<h1><%= t(:new_item_f, item: t(:lists).singularize)%></h1>
 
 <%= render 'form' %>
 
-<%= link_to 'Back', lists_path %>
+<%= link_to t(:back).html_safe, lists_path %>
