More on Lists i18n

--- a/app/views/lists/_form.html.erb
+++ b/app/views/lists/_form.html.erb
@@ -29,6 +29,6 @@
     %>
   </fieldset>
   <div class="actions">
-    <%= f.submit %>
+    <%= f.submit t(:create_item, item: t(:lists).singularize) %>
   </div>
 <% end %>
